tests/baselines/reference/nodeModulesImportResolutionNoCycle(module=nodenext).errors.txt
error TS4124: Compiler option 'module' of value 'nodenext' is unstable. Use nightly TypeScript to silence this error. Try updating with 'npm install -D typescript@next'.
tests/cases/conformance/node/index.cts(2,23): error TS2307: Cannot find module '#type' or its corresponding type declarations.
tests/cases/conformance/node/index.mts(2,23): error TS2307: Cannot find module '#type' or its corresponding type declarations.
tests/cases/conformance/node/index.ts(2,23): error TS2307: Cannot find module '#type' or its corresponding type declarations.


!!! error TS4124: Compiler option 'module' of value 'nodenext' is unstable. Use nightly TypeScript to silence this error. Try updating with 'npm install -D typescript@next'.
==== tests/cases/conformance/node/index.ts (1 errors) ====
    // esm format file
    import * as type from "#type";
                          ~~~~~~~
!!! error TS2307: Cannot find module '#type' or its corresponding type declarations.
    type;
==== tests/cases/conformance/node/index.mts (1 errors) ====
    // esm format file
    import * as type from "#type";
                          ~~~~~~~
!!! error TS2307: Cannot find module '#type' or its corresponding type declarations.
    type;
==== tests/cases/conformance/node/index.cts (1 errors) ====
    // esm format file
    import * as type from "#type";
                          ~~~~~~~
!!! error TS2307: Cannot find module '#type' or its corresponding type declarations.
    type;
==== tests/cases/conformance/node/package.json (0 errors) ====
    {
        "name": "package",
        "private": true,
        "type": "module",
        "exports": "package",
        "imports": {
            "#type": "package"
        }
    }